--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
 <body class="bg-gray-100">
 
     <div class="min-h-screen flex flex-col justify-center items-center p-6">
-        <div class="bg-green-100/50 text-center mb-8 rounded-lg shadow-lg p-6">
+        <div class=" text-center mb-8 rounded-lg shadow-lg p-6">
             <h1 class="text-8xl font-bold text-green-600">NOTIFICA</h1>
         </div>
 
